--- a/public/test.css
+++ b/public/test.css
@@ -20,9 +20,18 @@
   color: transparent; /* Transparent text */
   background-clip: text; /* Background clip to text */
   -webkit-background-clip: text; /* WebKit-specific property */
-  background-image: linear-gradient(to right, #C17EF1, #AF5AED); 
+  background-image: linear-gradient(to right, #7f96db, #8ca0dc); 
 }
 
 .linear-gradient-blue-background {
   background-image: linear-gradient(to right, #33AAFFB3, #1A9FFFB3);
+}
+
+.linear-gradient-dark-orange-text {
+  color: transparent; /* Transparent text */
+  background-clip: text; /* Background clip to text */
+  -webkit-background-clip: text; /* WebKit-specific property */
+  background-image: linear-gradient(to right, #d87a35, #e29b4b);
+
+
 }
