--- a/public/test.css
+++ b/public/test.css
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px;
+  /* padding: 20px; */
   user-select: none;
 }
 
